--- a/fruit-stories/fresh.html
+++ b/fruit-stories/fresh.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>好果實，等對的季節才能品嚐。</title>
+	<title>真摯的熱愛，只為新鮮水果而生。</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -113,7 +113,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<p>閱讀詳情</p>
-						<h1>好果實，等對的季節才能品嚐。</h1>
+						<h1>真摯的熱愛，只為新鮮水果而生。</h1>
 					</div>
 				</div>
 			</div>
@@ -129,18 +129,17 @@
 				<div class="col-lg-8">
 					<div class="single-article-section">
 						<div class="single-article-text">
-							<div class="single-artcile-bg"></div>
+							<img src="/assets/img/latest-news/news-bg-6.jpg" alt="">
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
-								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
+								<span class="date"><i class="fas fa-calendar"></i> 2025/06/06</span>
 							</p>
-							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
+							<h2>在果香裡綻放生命的鮮活</h2>
 							<p>
-								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，
-								歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。														
-								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。
-								選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。														
-								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
+								每當微風拂過果園，芳香撲鼻而來，那是生命在果香裡綻放的鮮活。新鮮水果承載著陽光與雨露的恩賜，
+                                果皮上的細膩紋理仿佛訴說著一段旅程。咬下一口多汁果肉，甜蜜與爽脆同時喚醒感官，彷彿時間停駐在最純粹的滋味裡。
+                                這種由內而外的鮮活，不僅滋養身體，更滋養心靈，讓人重新找回對生活的熱情。每一次品嘗，都是與大地對話，把握當下的美好瞬間。
+                                而正是這股果香，讓我們相信，生命最簡單的喜悅，往往就蘊藏在一顆鮮果之中。細品回味。
 							</p>
 						</div>
 
