--- a/fruit-stories/grape-season.html
+++ b/fruit-stories/grape-season.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>好果實，等對的季節才能品嚐。</title>
+	<title>善念孕育出美好果實</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -113,7 +113,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<p>閱讀詳情</p>
-						<h1>好果實，等對的季節才能品嚐。</h1>
+						<h1>善念孕育出美好果實。</h1>
 					</div>
 				</div>
 			</div>
@@ -129,18 +129,17 @@
 				<div class="col-lg-8">
 					<div class="single-article-section">
 						<div class="single-article-text">
-							<div class="single-artcile-bg"></div>
+							<img src="/assets/img/latest-news/news-bg-3.jpg" alt="">
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
-								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
+								<span class="date"><i class="fas fa-calendar"></i> 2025/06/03</span>
 							</p>
-							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
+							<h2>以純潔之心，灌溉希望的花朵。</h2>
 							<p>
-								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，
-								歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。														
-								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。
-								選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。														
-								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
+								人生如園，心靈是土地，善念是涓涓細流。當我們以純潔之心對待世界，無私地播種關懷與寬容，
+                                便能灌溉出希望的花朵。哪怕面對風霜，這份純淨依然滋養人心，讓失落者重拾勇氣，讓絕望者看見光明。
+                                願每一次真誠的付出，都成為一顆種子，在他人心中悄然萌芽。讓善與愛綻放，讓希望之花綴滿人生的四季，於彼此相伴中，
+                                共享生命最溫暖的芬芳。在這片園地裡，我們彼此扶持，共同守護那一抹綠意。唯有用心灌溉，才能看見希望盛開。真誠無懼。
 							</p>
 						</div>
 
