--- a/fruit-stories/tomato-season.html
+++ b/fruit-stories/tomato-season.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>好果實，等對的季節才能品嚐。</title>
+	<title>一個人的價值，如番茄般有屬於它的季節。</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -113,7 +113,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<p>閱讀詳情</p>
-						<h1>好果實，等對的季節才能品嚐。</h1>
+						<h1>一個人的價值，如番茄般有屬於它的季節。</h1>
 					</div>
 				</div>
 			</div>
@@ -129,18 +129,17 @@
 				<div class="col-lg-8">
 					<div class="single-article-section">
 						<div class="single-article-text">
-							<div class="single-artcile-bg"></div>
+							<img src="/assets/img/latest-news/news-bg-2.jpg" alt="">
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
-								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
+								<span class="date"><i class="fas fa-calendar"></i> 2025/06/02</span>
 							</p>
-							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
+							<h2>在人生的時序裡盛放，才能品味最豐盈的甜美。</h2>
 							<p>
-								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，
-								歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。														
-								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。
-								選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。														
-								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
+								每個人就像熟透的番茄，都有自己的成熟季節。有時在年輕時如青綠果實尚須日光與養分；
+                                有時在中年時如鮮紅果皮正值飽滿；有時在暮年時如微紅果肉仍保餘溫。唯有尊重自身時序，在適當環境中汲取養分，
+                                才能在對的季節綻放最鮮嫩的甜美。當我們學會等待與調整，方能在生命時序裡盛放，品味那最豐盈而獨特的滋味。就算氣候改變，
+                                只要堅守節奏，如番茄順應時節成熟。別讓他人催熟，也別忽視步伐。耐心等待，當陽光灑下，價值自會更豔紅。
 							</p>
 						</div>
 
