--- a/news.html
+++ b/news.html
@@ -144,74 +144,74 @@
 
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="#"><div class="latest-news-bg news-bg-2"></div></a>
+						<a href="/fruit-stories/tomato-season.html"><div class="latest-news-bg news-bg-2"></div></a>
 						<div class="news-text-box">
-							<h3><a href="#">一個人的價值，如番茄般有屬於它的季節。</a></h3>
+							<h3><a href="/fruit-stories/tomato-season.html">一個人的價值，如番茄般有屬於它的季節。</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
 								<span class="date"><i class="fas fa-calendar"></i> 2025/06/02</span>
 							</p>
 							<p class="excerpt">每一種水果都有它最適合登場的時刻，正如每一個人也都有屬於自己的光芒時機。</p>
-							<a href="#" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<a href="/fruit-stories/tomato-season.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="#"><div class="latest-news-bg news-bg-3"></div></a>
+						<a href="/fruit-stories/grape-season.html"><div class="latest-news-bg news-bg-3"></div></a>
 						<div class="news-text-box">
-							<h3><a href="#">善念孕育出美好果實</a></h3>
+							<h3><a href="/fruit-stories/grape-season.html">善念孕育出美好果實</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
 								<span class="date"><i class="fas fa-calendar"></i> 2025/06/03</span>
 							</p>
 							<p class="excerpt">我們相信，用心耕耘的每個當下，終將結出新鮮多汁的回報。正如每一顆水果，都源自一個美好的開始。</p>
-							<a href="#" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<a href="/fruit-stories/grape-season.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="#"><div class="latest-news-bg news-bg-4"></div></a>
+						<a href="/fruit-stories/orange-season.html"><div class="latest-news-bg news-bg-4"></div></a>
 						<div class="news-text-box">
-							<h3><a href="#">為新鮮橙子傾心，是味覺的直覺選擇</a></h3>
+							<h3><a href="/fruit-stories/orange-season.html">為新鮮橙子傾心，是味覺的直覺選擇</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
 								<span class="date"><i class="fas fa-calendar"></i> 2025/06/04</span>
 							</p>
 							<p class="excerpt">從果園直送的新鮮滋味，每一口都喚醒味蕾的感動</p>
-							<a href="#" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<a href="/fruit-stories/orange-season.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="#"><div class="latest-news-bg news-bg-5"></div></a>
+						<a href="/fruit-stories/berries-season.html"><div class="latest-news-bg news-bg-5"></div></a>
 						<div class="news-text-box">
-							<h3><a href="#">為什麼莓果總是這麼誘人</a></h3>
+							<h3><a href="/fruit-stories/berries-season.html">為什麼莓果總是這麼誘人</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
 								<span class="date"><i class="fas fa-calendar"></i> 2025/06/05</span>
 							</p>
 							<p class="excerpt">或許因為它們只在對的時候成熟，像極了生活中那些值得等待的時刻。</p>
-							<a href="#" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<a href="/fruit-stories/berries-season.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="#"><div class="latest-news-bg news-bg-6"></div></a>
+						<a href="/fruit-stories/fresh.html"><div class="latest-news-bg news-bg-6"></div></a>
 						<div class="news-text-box">
-							<h3><a href="#">真摯的熱愛，只為新鮮水果而生。</a></h3>
+							<h3><a href="/fruit-stories/fresh.html">真摯的熱愛，只為新鮮水果而生。</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
 								<span class="date"><i class="fas fa-calendar"></i> 2025/06/06</span>
 							</p>
 							<p class="excerpt">從選果、包裝到品嚐，誠哥 對每一顆水果都傾注熱情，只為將最好的送到你手中。</p>
-							<a href="#" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<a href="/fruit-stories/fresh.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
