--- a/single-product.html
+++ b/single-product.html
@@ -138,16 +138,15 @@
 				<div class="col-md-7">
 					<div class="single-product-content">
 						<h3>青蘋果</h3>
+						<img class=" d-none" src="assets/img/products/product-img-5.jpg" />
 						<p class="single-product-pricing"><span>每顆</span> 100元</p>
 						<p>酸甜平衡、脆口多汁的青蘋果，是炎熱季節裡最清爽的選擇。果皮帶有天然光澤，咬下瞬間清脆聲響撲鼻而來，
 							尾韻微酸，喚醒味蕾。無論直接食用、搭配沙拉或榨成果汁，都能品嚐到自然純粹的鮮爽滋味。
 							我們嚴選在地果農新鮮採收，產地直送，讓你安心享用每一口脆甜。每日限量出貨，錯過就得再等明天！</p>
-						<div class="single-product-form">
-							<form action="index.html">
-								<input type="number" placeholder="0">
-							</form>
-							<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-						</div>
+						
+						<button class="cart-btn">
+							<i class="fas fa-shopping-cart"></i> 加入購物車
+						</button>
 						
 					</div>
 				</div>
@@ -156,52 +155,7 @@
 	</div>
 	<!-- end single product -->
 
-	<!-- more products -->
-	<div class="more-products mb-150">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">
-						<h3>相關商品</h3>
-						<p>你可能喜歡的產品。</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
-						</div>
-						<h3>草莓</h3>
-						<p class="product-price"><span>每斤</span> 220元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
-						</div>
-						<h3>葡萄</h3>
-						<p class="product-price"><span>每斤</span> 120元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3 text-center">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
-						</div>
-						<h3>檸檬</h3>
-						<p class="product-price"><span>每斤</span> 35元 </p>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end more products -->
+	
 
 
 	<!-- footer -->
@@ -286,6 +240,7 @@
 	<script src="assets/js/sticker.js"></script>
 	<!-- main js -->
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/home.js"></script>
 
 </body>
 
