--- a/fruit-stories/berries-season.html
+++ b/fruit-stories/berries-season.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>好果實，等對的季節才能品嚐。</title>
+	<title>為什麼莓果總是這麼誘人</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -113,7 +113,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<p>閱讀詳情</p>
-						<h1>好果實，等對的季節才能品嚐。</h1>
+						<h1>為什麼莓果總是這麼誘人</h1>
 					</div>
 				</div>
 			</div>
@@ -129,18 +129,19 @@
 				<div class="col-lg-8">
 					<div class="single-article-section">
 						<div class="single-article-text">
-							<div class="single-artcile-bg"></div>
+							<img src="/assets/img/latest-news/news-bg-5.jpg" alt="">
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
-								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
+								<span class="date"><i class="fas fa-calendar"></i> 2025/06/05</span>
 							</p>
-							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
+							<h2>一抹鮮紅誘惑，喚醒舌尖深處的甜蜜渴望</h2>
 							<p>
-								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，
-								歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。														
-								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。
-								選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。														
-								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
+								莓果的鮮紅色澤宛如初晨朝陽，嬌嫩透亮，總讓人無法抗拒。當一顆莓果入口，
+                                細膩果肉瞬間在舌尖融化，酸甜交織的滋味猶如春日花園的微風，撩動心底最純粹的渴望。
+                                不論是草莓、藍莓或覆盆子，它們各自蘊含獨特的果香與果酸，彷彿自然用鮮紅畫筆點綴舌尖，
+                                喚醒沉睡的味蕾。這一抹誘人紅，使人忍不住想要一口接一口，品嚐生命中最甜美、最真實的悸動。
+                                莓果不僅鮮美，其健康價值更是加分，維生素與抗氧化成分伴隨每一口甜蜜，讓人身心都得到滋養。天然的好滋味，
+                                令人難以抗拒。真好！鮮美。
 							</p>
 						</div>
 
