--- a/fruit-stories/orange-season.html
+++ b/fruit-stories/orange-season.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>好果實，等對的季節才能品嚐。</title>
+	<title>為新鮮橙子傾心，是味覺的直覺選擇</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -113,7 +113,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<p>閱讀詳情</p>
-						<h1>好果實，等對的季節才能品嚐。</h1>
+						<h1>為新鮮橙子傾心，是味覺的直覺選擇</h1>
 					</div>
 				</div>
 			</div>
@@ -129,18 +129,18 @@
 				<div class="col-lg-8">
 					<div class="single-article-section">
 						<div class="single-article-text">
-							<div class="single-artcile-bg"></div>
+							<img src="/assets/img/latest-news/news-bg-4.jpg" alt="">
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
-								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
+								<span class="date"><i class="fas fa-calendar"></i> 2025/06/04</span>
 							</p>
-							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
+							<h2>在落入口中的一瞬，感受陽光與清新的共鳴</h2>
 							<p>
-								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，
-								歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。														
-								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。
-								選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。														
-								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
+								當一瓣鮮橙輕抵唇齒，甘甜汁液在口腔蔓延，如陽光融化於心。那橙香猶如初晨微光
+                                ，喚醒沉睡味蕾，彷彿將果園的清新與陽光緊握於手。每一次咀嚼，都是滋味的交響樂章，
+                                鮮明卻不張揚，溫暖卻不炙熱。在這短暫的瞬間，舌尖與感官齊聲呼應，將大自然的純粹送入心底。
+                                一口入口，橙皮的微微苦韻先行，隨即被鮮甘所擁，層次分明。橙肉透亮，彷彿載著陽光與露珠，輕咬間汁液濺灑，
+                                猶如交織味覺的慶典。
 							</p>
 						</div>
 
