--- a/raspberry.html
+++ b/raspberry.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description"
+		content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>好果實，等對的季節才能品嚐。</title>
+	<title>覆盆莓</title>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -15,33 +17,34 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 	<!-- fontawesome -->
-	<link rel="stylesheet" href="../assets/css/all.min.css">
+	<link rel="stylesheet" href="assets/css/all.min.css">
 	<!-- bootstrap -->
-	<link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<!-- owl carousel -->
-	<link rel="stylesheet" href="../assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="assets/css/owl.carousel.css">
 	<!-- magnific popup -->
-	<link rel="stylesheet" href="../assets/css/magnific-popup.css">
+	<link rel="stylesheet" href="assets/css/magnific-popup.css">
 	<!-- animate css -->
-	<link rel="stylesheet" href="../assets/css/animate.css">
+	<link rel="stylesheet" href="assets/css/animate.css">
 	<!-- mean menu css -->
-	<link rel="stylesheet" href="../assets/css/meanmenu.min.css">
+	<link rel="stylesheet" href="assets/css/meanmenu.min.css">
 	<!-- main style -->
-	<link rel="stylesheet" href="../assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 	<!-- responsive -->
-	<link rel="stylesheet" href="../assets/css/responsive.css">
+	<link rel="stylesheet" href="assets/css/responsive.css">
 
 </head>
+
 <body>
-	
+
 	<!--PreLoader-->
-    <div class="loader">
-        <div class="loader-inner">
-            <div class="circle"></div>
-        </div>
-    </div>
-    <!--PreLoader Ends-->
-	
+	<div class="loader">
+		<div class="loader-inner">
+			<div class="circle"></div>
+		</div>
+	</div>
+	<!--PreLoader Ends-->
+
 	<!-- header -->
 	<div class="top-header-area" id="sticker">
 		<div class="container">
@@ -60,19 +63,21 @@
 						<nav class="main-menu">
 							<!-- 桌機板清單 -->
 							<ul>
-								<li ><a href="../home.html">首頁</a></li>
-								<li><a href="../about.html">我們的理念</a></li>
-								<li><a href="../news.html">水果新鮮報</a>
+								<li ><a href="home.html">首頁</a></li>
+								<li><a href="about.html">我們的理念</a></li>
+								<li><a href="news.html">水果新鮮報</a>
 								</li>
-								<li><a href="../contact.html">聯絡資訊</a></li>
-								<li><a href="../shop.html">購物專區</a></li>
+								<li><a href="contact.html">聯絡資訊</a></li>
+								<li><a href="shop.html">購物專區</a></li>
 								<!-- 購物車和搜尋 -->
 								<li>
 									<div class="header-icons">
 										<!-- 購物車 -->
-										<a class="shopping-cart" href="../cart.html"><i class="fas fa-shopping-cart"></i></a>
+										<a class="shopping-cart" href="cart.html"><i
+												class="fas fa-shopping-cart"></i></a>
 										<!-- 搜尋部分 -->
-										<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+										<a class="mobile-hide search-bar-icon" href="#"><i
+												class="fas fa-search"></i></a>
 									</div>
 								</li>
 							</ul>
@@ -105,55 +110,53 @@
 		</div>
 	</div>
 	<!-- end search arewa -->
-	
+
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>閱讀詳情</p>
-						<h1>好果實，等對的季節才能品嚐。</h1>
+						<p>查看詳細資訊</p>
+						<h1>覆盆莓</h1>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- end breadcrumb section -->
-	
-	<!-- single article section -->
-	<div class="mt-150 mb-150">
+
+	<!-- single product -->
+	<div class="single-product mt-150 mb-150">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2"></div>
-				<div class="col-lg-8">
-					<div class="single-article-section">
-						<div class="single-article-text">
-							<div class="single-artcile-bg"></div>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> 誠哥選果</span>
-								<span class="date"><i class="fas fa-calendar"></i> 2025/06/01</span>
-							</p>
-							<h2>耐心等待，只為那一口剛剛好的甜。</h2>
-							<p>
-								草莓不是隨時都有，真正甜美的果實，只在對的時節成熟。大湖的草莓便是如此，從入冬後的低溫開始醞釀，
-								歷經朝霧露水與日夜溫差的洗禮，才能孕育出果肉飽滿、香氣濃郁的紅寶石。這不是大量溫室催熟的果實，而是來自土地與氣候共同雕刻的天然風味。														
-								菜式水果堅持不販售過早採收的草莓，因為我們知道，錯過最佳熟成點，即便外觀再紅潤，也失去了那「剛剛好」的甜與酸。
-								選擇在正確的時間出貨，意味著你收到的每一盒草莓，都是來自產季高峰、農人眼中的珍品。														
-								在這個什麼都講求快的時代，我們反其道而行，守住那份對「真正好果實」的執著。因為值得等待的，不只是一口滋味，而是對品質的信任。
-							</p>
-						</div>
-
+				<div class="col-md-5">
+					<div class="single-product-img">
+						<img src="assets/img/products/product-img-6.jpg" alt="">
+					</div>
+				</div>
+				<div class="col-md-7">
+					<div class="single-product-content">
+						<h3>覆盆莓</h3>
+						<img class=" d-none" src="assets/img/products/product-img-6.jpg" />
+						<p class="single-product-pricing"><span>每顆</span> 139元</p>
+						<p>覆盆莓，又稱樹莓或紅莓，是一種色澤鮮紅、口感細緻的高級漿果。果實小巧多汁，酸甜平衡，帶有獨特莓果香氣，常被用於甜點裝飾
+                            、果醬或果汁製作。富含維生素C、膳食纖維與多種抗氧化物質，尤其是花青素與鞣花酸，有助於延緩老化、提升免疫力並促進腸道健康。
+                            新鮮覆盆莓不易久放，需冷藏保存並儘快食用。無論單吃、拌優格、加進穀片或烘焙中，都是結合健康與美味的極佳選擇。</p>					
+						<button class="cart-btn">
+							<i class="fas fa-shopping-cart"></i> 加入購物車
+						</button>
 						
 					</div>
 				</div>
-				
 			</div>
 		</div>
 	</div>
-	<!-- end single article section -->
+	<!-- end single product -->
 
 	
+
+
 	<!-- footer -->
 	<div class="footer-area">
 		<div class="container">
@@ -191,8 +194,6 @@
 		</div>
 	</div>
 	<!-- end footer -->
-
-	
 	
 	<!-- copyright -->
 	<div class="copyright">
@@ -217,27 +218,29 @@
 		</div>
 	</div>
 	<!-- end copyright -->
-	
+
 	<!-- jquery -->
-	<script src="../assets/js/jquery-1.11.3.min.js"></script>
+	<script src="assets/js/jquery-1.11.3.min.js"></script>
 	<!-- bootstrap -->
-	<script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<!-- count down -->
-	<script src="../assets/js/jquery.countdown.js"></script>
+	<script src="assets/js/jquery.countdown.js"></script>
 	<!-- isotope -->
-	<script src="../assets/js/jquery.isotope-3.0.6.min.js"></script>
+	<script src="assets/js/jquery.isotope-3.0.6.min.js"></script>
 	<!-- waypoints -->
-	<script src="../assets/js/waypoints.js"></script>
+	<script src="assets/js/waypoints.js"></script>
 	<!-- owl carousel -->
-	<script src="../assets/js/owl.carousel.min.js"></script>
+	<script src="assets/js/owl.carousel.min.js"></script>
 	<!-- magnific popup -->
-	<script src="../assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="assets/js/jquery.magnific-popup.min.js"></script>
 	<!-- mean menu -->
-	<script src="../assets/js/jquery.meanmenu.min.js"></script>
+	<script src="assets/js/jquery.meanmenu.min.js"></script>
 	<!-- sticker js -->
-	<script src="../assets/js/sticker.js"></script>
+	<script src="assets/js/sticker.js"></script>
 	<!-- main js -->
-	<script src="../assets/js/main.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/home.js"></script>
 
 </body>
+
 </html>
