有購物車無法加入的bug改善V-1.1

--- a/about.html
+++ b/about.html
@@ -192,7 +192,10 @@
 				<span>售價 <br> 只要</span>5折 
 				<span>心動不如馬上行動</span>
 			</div>
-            <a href="shop.html" class="cart-btn btn-lg">加入購物車</a>
+            <button class="cart-btn"
+				onclick="addToCart({id: 1, name: '草莓', price: 220, img: 'assets/img/products/product-img-1.jpg'})">
+				<i class="fas fa-shopping-cart"></i> 加入購物車
+			</button>
         </div>
     </section>
 	
@@ -279,6 +282,6 @@
 	<script src="assets/js/sticker.js"></script>
 	<!-- main js -->
 	<script src="assets/js/main.js"></script>
-
+	<script src="/assets/js/home.js"></script>
 </body>
 </html>
